  * Solve certificate deployment to clients (issue #66).
  * Improve sched log cleanups (issue #67).
  * Improve addclient and addnetwork database ID allocation (issue #69).
  * Improve security on HTTP server getting the client config. (issue #76).
  * Delete client related jobs in delclient workflow (issue #82).
  * Updated timeout for drlm-stord.service (issue #74).

-- Pau Roura <pau@brainupdaters.net>  Mon, 04 Jun 2018 00:00:00 +0100

drlm (2.2.0) stable release; urgency=high

  * "Make deb" improved deleting residual files.
  * NEW Real time clients log in DRLM server.
  * NEW bash_completion feature added to facilitate the use.
  * It is possible to perform a "rear recover" without the parameters DRLM_SERVER, REST_OPTS and ID.
  * listbackup, listclient and listnetwork with "-A" parameter by default.
  * SSH_OPTS variable created in default.conf for remove hardcoded ssh options.
  * Debian 9 compatibility added.
  * Improved client configuration template.
  * Improved treatment of deleted client backups

 -- Pau Roura <pau@brainupdaters.net>  Wed, 23 Aug 2017 00:00:00 +0100

drlm (2.1.3) stable release; urgency=high

  * Updated Debian 6 installclient dependencies.
  * Now "apt-get update" is done before "apt-get install" in instclient debian workflow.
  * Set global UMASK value for all DRLM creating files durting execution.

 -- Pau Roura <pau@brainupdaters.net>  Thu, 16 Mar 2017 00:00:00 +0100

drlm (2.1.2) stable release; urgency=high

  * SUDO_CMDS_DRLM added in default.conf allowing to easy add new sudo
  * Automatic creation of /etc/sudoers.d if not exists RedHat/CenOS 5
  * Fixed some errors for dependencies on default.conf.
  * DRLM_USER variable deleted on addclient and help.
  * Added sudo for stat to allow check size on File Systems without perms.
  * Sudo configuration files are dynamically created according to the OS type.
  * Solved problem for start services with non root user.
